--- a/anvil_consortium_manager/templates/anvil_consortium_manager/account_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/account_detail.html
@@ -1,36 +1,34 @@
-{% extends "anvil_consortium_manager/base.html" %}
+{% extends "anvil_consortium_manager/__object_detail.html" %}
 {% load static %}
 
 {% load render_table from django_tables2 %}
 
-{% block title %}Account: {{ object.username }}{% endblock %}
 
-{% block content %}
-
-<h2>Account Details</h2>
+{% block title %}Account: {{ object.email }}{% endblock %}
 
 
-{% if object.is_service_account %}
-  <span class="badge bg-info">
-    <span class="fa-solid fa-robot me-1"></span>
-    Service account
-  </span>
-{% endif %}
+{% block pills %}
+  {% if object.is_service_account %}
+    <span class="badge bg-info">
+      <span class="fa-solid fa-robot me-1"></span>
+      Service account
+    </span>
+  {% endif %}
+  {% if object.verified_email_entry %}
+    <span class="badge bg-success">
+      <span class="fa-solid fa-user-check me-1"></span>
+      Verified by user
+    </span>
+  {% endif %}
+  {% if is_inactive %}
+    <div class="my-3 alert alert-dark" role="alert">
+    This account is inactive. It has been removed from all groups on AnVIL, but a record of previous group membership is still stored in this app.
+    </div>
+  {% endif %}
+{% endblock pills %}
 
-{% if object.verified_email_entry %}
-  <span class="badge bg-success">
-    <span class="fa-solid fa-user-check me-1"></span>
-    Verified by user
-  </span>
-{% endif %}
 
-{% if is_inactive %}
-  <div class="my-3 alert alert-dark" role="alert">
-  This account is inactive. It has been removed from all groups on AnVIL, but a record of previous group membership is still stored in this app.
-  </div>
-{% endif %}
-
-<div class="my-3 p-3 bg-light border rounded shadow-sm">
+{% block panel %}
   <ul>
     <li>Email: {{ object.email }}</li>
     <li>Status: {{ object.get_status_display }}</li>
@@ -40,45 +38,46 @@
     <li>Date verified by user: {% if object.verified_email_entry %}{{ object.verified_email_entry.date_verified }}{% else %} &mdash; {% endif %}</li>
     <li>Note: {{ object.note }}</li>
   </ul>
-</div>
+{% endblock panel %}
 
-<div class="my-3">
-  <div class="accordion" id="accordionGroups">
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="headingGroupsOne">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseGroupsOne" aria-expanded="false" aria-controls="collapseGroupsOne">
-          <span class="fa-solid fa-user-group mx-2"></span>
-          View groups that this account is a member of
-          <span class="badge mx-2 bg-secondary pill"> {{ group_table.rows|length }}</span>
-        </button>
-      </h2>
-      <div id="collapseGroupsOne" class="accordion-collapse collapse" aria-labelledby="headingGroupsOne" data-bs-parent="#accordionGroups">
-        <div class="accordion-body">
-          {% render_table group_table %}
+
+{% block after_panel %}
+  <div class="my-3">
+    <div class="accordion" id="accordionGroups">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingGroupsOne">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseGroupsOne" aria-expanded="false" aria-controls="collapseGroupsOne">
+            <span class="fa-solid fa-user-group mx-2"></span>
+            View groups that this account is a member of
+            <span class="badge mx-2 bg-secondary pill"> {{ group_table.rows|length }}</span>
+          </button>
+        </h2>
+        <div id="collapseGroupsOne" class="accordion-collapse collapse" aria-labelledby="headingGroupsOne" data-bs-parent="#accordionGroups">
+          <div class="accordion-body">
+            {% render_table group_table %}
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+{% endblock after_panel %}
 
 
-{% if show_edit_links %}
-<p>
-  <a href="{% url 'anvil_consortium_manager:accounts:add_to_group' uuid=object.uuid %}" class="btn btn-primary" role="button">Add this account to a group</a>
-</p>
-
-<p>
-  <a href="{% url 'anvil_consortium_manager:accounts:update' uuid=object.uuid %}" class="btn btn-secondary" role="button">Update</a>
-  {% if show_deactivate_button %}
-    <a href="{% url 'anvil_consortium_manager:accounts:deactivate' uuid=object.uuid %}" class="btn btn-secondary" role="button">Deactivate account</a>
-  {% endif %}
-
-  {% if show_reactivate_button %}
-    <a href="{% url 'anvil_consortium_manager:accounts:reactivate' uuid=object.uuid %}" class="btn btn-secondary" role="button">Reactivate account</a>
-  {% endif %}
-
-  <a href="{% url 'anvil_consortium_manager:accounts:delete' uuid=object.uuid %}" class="btn btn-danger" role="button">Delete from app</a>
-</p>
+{% block action_buttons %}
+  {% if show_edit_links %}
+  <p>
+    <a href="{% url 'anvil_consortium_manager:accounts:add_to_group' uuid=object.uuid %}" class="btn btn-primary" role="button">Add this account to a group</a>
+  </p>
+  <p>
+    <a href="{% url 'anvil_consortium_manager:accounts:update' uuid=object.uuid %}" class="btn btn-secondary" role="button">Update</a>
+    {% if show_deactivate_button %}
+      <a href="{% url 'anvil_consortium_manager:accounts:deactivate' uuid=object.uuid %}" class="btn btn-secondary" role="button">Deactivate account</a>
+    {% endif %}
+    {% if show_reactivate_button %}
+      <a href="{% url 'anvil_consortium_manager:accounts:reactivate' uuid=object.uuid %}" class="btn btn-secondary" role="button">Reactivate account</a>
+    {% endif %}
+    <a href="{% url 'anvil_consortium_manager:accounts:delete' uuid=object.uuid %}" class="btn btn-danger" role="button">Delete from app</a>
+  </p>
 {% endif %}
 
-{% endblock content %}
+{% endblock action_buttons %}
