--- a/anvil_consortium_manager/templates/anvil_consortium_manager/billingproject_update.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/billingproject_update.html
@@ -1,15 +1,25 @@
-{% extends "anvil_consortium_manager/base.html" %}
+{% extends "anvil_consortium_manager/billingproject_detail.html" %}
 {% load crispy_forms_tags %}
 
-{% block title %}Import an existing Billing Project{% endblock title %}
+{% block title %}Update Billing Project{% endblock title %}
 
-{% block content %}
+{% block panel %}
+  <ul>
+    <li>Name: {{ object.name }}</li>
+    <li>Date added: {{ object.created }}</li>
+    <li>Date modified: {{ object.modified }}</li>
+  </ul>
+{% endblock panel %}
 
-<h2>Update Billing Project {{ object.name }}</h2>
-
+{% block after_panel %}
   <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
     <button type="submit" class="btn btn-success">Save</button>
+    <a href="{{ object.get_absolute_url }}" class="btn btn-secondary" role="button">Cancel</a>
   </form>
-{% endblock %}
+{% endblock after_panel %}
+
+
+{% block action_buttons %}
+{% endblock action_buttons %}
