--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupsharing_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupsharing_detail.html
@@ -1,28 +1,27 @@
-{% extends "anvil_consortium_manager/base.html" %}
+{% extends "anvil_consortium_manager/__object_detail.html" %}
 {% load static %}
 
 {% block title %}Workspace group sharing: {{ object }}{% endblock %}
 
-{% block content %}
+{% block panel %}
+<ul>
+  <li>Group: <a href="{{object.group.get_absolute_url}}"> {{ object.group}} </a></li>
+  <li>Workspace: <a href="{{object.workspace.get_absolute_url}}"> {{ object.workspace}} </a></li>
+  <li>Access: {{ object.access }}</li>
+  <li>Can compute: {{ object.can_compute }}</li>
+  <li>Date added: {{ object.created }}</li>
+  <li>Date modified: {{ object.modified }}</li>
+</ul>
+{% endblock panel %}
 
+{% block after_panel %}
+{% endblock after_panel %}
 
-<h2>Workspace Group Sharing details</h2>
-<div class="my-3 p-3 bg-light border rounded shadow-sm">
-  <ul>
-    <li>Group: <a href="{{object.group.get_absolute_url}}"> {{ object.group}} </a></li>
-    <li>Workspace: <a href="{{object.workspace.get_absolute_url}}"> {{ object.workspace}} </a></li>
-    <li>Access: {{ object.access }}</li>
-    <li>Can compute: {{ object.can_compute }}</li>
-    <li>Date added: {{ object.created }}</li>
-    <li>Date modified: {{ object.modified }}</li>
-  </ul>
-</div>
-
-{% if show_edit_links %}
-<p>
-  <a href="{% url 'anvil_consortium_manager:workspaces:sharing:update' billing_project_slug=object.workspace.billing_project.name workspace_slug=object.workspace.name group_slug=object.group.name %}" class="btn btn-secondary" role="button">Update</a>
-  <a href="{% url 'anvil_consortium_manager:workspaces:sharing:delete' billing_project_slug=object.workspace.billing_project.name workspace_slug=object.workspace.name group_slug=object.group.name %}" class="btn btn-danger" role="button">Delete on AnVIL</a>
-</p>
-{% endif %}
-
-{% endblock content %}
+{% block action_buttons %}
+  {% if show_edit_links %}
+    <p>
+      <a href="{% url 'anvil_consortium_manager:workspaces:sharing:update' billing_project_slug=object.workspace.billing_project.name workspace_slug=object.workspace.name group_slug=object.group.name %}" class="btn btn-secondary" role="button">Update</a>
+      <a href="{% url 'anvil_consortium_manager:workspaces:sharing:delete' billing_project_slug=object.workspace.billing_project.name workspace_slug=object.workspace.name group_slug=object.group.name %}" class="btn btn-danger" role="button">Delete on AnVIL</a>
+    </p>
+  {% endif %}
+{% endblock action_buttons %}
