--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupsharing_update.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupsharing_update.html
@@ -1,23 +1,27 @@
-{% extends "anvil_consortium_manager/base.html" %}
+{% extends "anvil_consortium_manager/__object_detail.html" %}
 {% load crispy_forms_tags %}
 {% load static %}
 
-{% block title %}Workspace group sharing: {{ object }}{% endblock %}
+{% block title %}Modify workspace group sharing{% endblock %}
 
-{% block content %}
+{% block panel %}
+<ul>
+  <li>Group: <a href="{{object.group.get_absolute_url}}"> {{ object.group}} </a></li>
+  <li>Workspace: <a href="{{object.workspace.get_absolute_url}}"> {{ object.workspace}} </a></li>
+  <li>Date added: {{ object.created }}</li>
+  <li>Date modified: {{ object.modified }}</li>
+</ul>
+{% endblock panel %}
 
-  <h2>Modify Workspace Group Sharing</h2>
-
-  <ul>
-    <li>Workspace: {{ object.workspace }}</li>
-    <li>Group: {{ object.group }}</li>
-    <li>Access: {{ object.access }}</li>
-  </ul>
-
+{% block after_panel %}
   <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
     <button type="submit" class="btn btn-success">Save</button>
+    <a href="{{ object.get_absolute_url }}" class="btn btn-secondary" role="button">Cancel</a>
   </form>
+{% endblock after_panel %}
 
-{% endblock content %}
+
+{% block action_buttons %}
+{% endblock action_buttons %}
