Change how workspace detail fields are displayed
Now, show the primary workspace information for all workspaces.
Underneath, show any user-specified workspace detail fields.

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
@@ -24,6 +24,11 @@
     <li>Date modified: {{ object.modified }}</li>
     <li>Note: {{ object.note }}</li>
   </ul>
+  {% if object.workspace_type != "workspace" %}
+    <hr>
+    {% block workspace_data %}
+    {% endblock workspace_data %}
+  {% endif %}
 {% endblock panel %}
 
 {% block after_panel %}
