Add an icon to detail box

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/__object_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/__object_detail.html
@@ -12,7 +12,10 @@
   {% endblock pills %}
 
   <div class="card my-3">
-    <h5 class="card-header">Details</h5>
+    <div class="card-header">
+      <span class="fa-solid fa-circle-info mx-2"></span>
+      Details
+    </div>
     <div class="card-body">
       <p class-card-text>
       {% block panel %}
