--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
@@ -3,7 +3,7 @@
 
 {% load render_table from django_tables2 %}
 
-{% block title %}Workspace: {{ object }}{% endblock %}
+{% block title %}{{ workspace_display_name }}: {{ object }}{% endblock %}
 
 
 {% block anvil_link %}
