Show the workspace type display name in templates

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_update.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_update.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
-{% block title %}Update Workspace{% endblock title %}
+{% block title %}Update {{ workspace_type_display_name }}{% endblock title %}
 
 {% block panel %}
   <ul>
