--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_create.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_create.html
@@ -2,11 +2,11 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
-{% block title %}New Workspace{% endblock title %}
+{% block title %}New {{ workspace_type_display_name }}{% endblock title %}
 
 {% block content %}
 
-<h2>Create a new Workspace on AnVIL</h2>
+<h2>Create a new {{ workspace_type_display_name }} on AnVIL</h2>
 
   <form method="post">
 
