--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_import.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_import.html
@@ -1,11 +1,12 @@
 {% extends "anvil_consortium_manager/base.html" %}
 {% load crispy_forms_tags %}
 
-{% block title %}Import Workspace{% endblock title %}
-
-<h2>Import an existing workspace from AnVIL</h2>
+{% block title %}Import {{ workspace_type_display_name }}{% endblock title %}
 
 {% block content %}
+
+<h2>Import an existing {{ workspace_type_display_name }} from AnVIL</h2>
+
   <form method="post">
     {% csrf_token %}
     {{ workspace_data_formset|crispy }}
