--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_list.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_list.html
@@ -3,7 +3,7 @@
 
 {% load render_table from django_tables2 %}
 
-{% block title %}Workspaces{% endblock %}
+{% block title %}{{workspace_type_display_name}}s{% endblock %}
 
 {% block content %}
 <div class="container">
@@ -11,7 +11,7 @@
   <div class="row">
     <div class="col-sm-12">
 
-      <h2>Workspaces</h2>
+      <h2>{{workspace_type_display_name}}s</h2>
 
       {% render_table table %}
 
