Add after_title block and remove anvil_link block
Only the workspace model should have a link to AnVIL. Therefore,
make the object detail template more flexible by adding a new block
called "after_title" in the h2 tag, and then put the anvil link
in that block for the workspace template.

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/__object_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/__object_detail.html
@@ -4,8 +4,7 @@
 {% block content %}
 
   <h2>
-    {% block title %}{% endblock title %}
-    {% block anvil_link %} {% endblock anvil_link %}
+    {% block title %}{% endblock title %} {% block after_title %}{% endblock after_title %}
   </h2>
 
   {% block pills %}
