Add ability to clone a workspace
Add a form for cloning a workspace and tets for that form. Add a
view, url, and template for cloning a given workspace into a
specific workspae type. Add a button to the workspace detail page
for cloning that workspace. Modify the anvil_clone method for
Workspace to not check if a workspace already exists; all this
method does now is make the API call to AnVIL with the proper auth
domains. This is because the view to clone the workspace saves the
object and then calls anvil_clone.

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/base.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/base.html
@@ -11,6 +11,8 @@
 
     <link rel="icon" href="{% static 'images/favicons/favicon.ico' %}">
 
+    <!-- TEST COMMENT - app template -->
+
     {% block css %}
     <!-- Latest compiled and minified Bootstrap CSS -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
