Link to user profile on AccountDetail page
If the user model has a get_absolute_url method, link to the user
profile page on the AccountDetail page. Otherwise, just show the
user object.

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/account_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/account_detail.html
@@ -34,7 +34,16 @@
     <li>Status: {{ object.get_status_display }}</li>
     <li>Date added: {{ object.created }}</li>
     <li>Date modified: {{ object.modified }}</li>
-    <li>User: {% if object.verified_email_entry %}{{ object.verified_email_entry.user }}{% else %} &mdash; {% endif %}</li>
+    <li>User:
+      {% if object.verified_email_entry %}
+        {% if object.verified_email_entry.user.get_absolute_url %}
+          <a href="{{ object.verified_email_entry.user.get_absolute_url }}">{{ object.verified_email_entry.user }}</a>
+        {% else %}
+          {{ object.verified_email_entry.user }}
+        {% endif %}
+      {% else %}
+        &mdash;
+      {% endif %}</li>
     <li>Date verified by user: {% if object.verified_email_entry %}{{ object.verified_email_entry.date_verified }}{% else %} &mdash; {% endif %}</li>
   </ul>
 {% endblock panel %}
