Minor modifications to account verification email template

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/account_notification_email.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/account_notification_email.html
@@ -1,5 +1,5 @@
 {% autoescape off %}
 
-{{ user.username }} has verified {{ email }}
+User {{ user.username }} has verified AnVIL account {{ email }}.
 
 {% endautoescape %}
