--- a/anvil_consortium_manager/templates/anvil_consortium_manager/managedgroup_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/managedgroup_detail.html
@@ -88,7 +88,7 @@
         <h2 class="accordion-header" id="headingMembersOne">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseMembersOne" aria-expanded="false" aria-controls="collapseMembersOne">
             <span class="fa-solid fa-code-fork mx-2" data-fa-transform="flip-v"></span>
-            View group members
+            View groups that are in this group
             <span class="badge mx-2 bg-secondary pill"> {{ group_table.rows|length }}</span>
           </button>
         </h2>
@@ -103,7 +103,7 @@
         <h2 class="accordion-header" id="headingMembersTwo">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseMembersTwo" aria-expanded="false" aria-controls="collapseMembersTwo">
             <span class="fa-solid fa-user-group mx-2"></span>
-            View active account members
+            View active accounts in this group
             <span class="badge mx-2 bg-secondary pill"> {{ active_account_table.rows|length }}</span>
           </button>
         </h2>
@@ -118,7 +118,7 @@
         <h2 class="accordion-header" id="headingMembersThree">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseMembersThree" aria-expanded="false" aria-controls="collapseMembersTwo">
             <span class="fa-solid fa-users-slash mx-2"></span>
-            View inactive account members
+            View inactive accounts in this group
             <span class="badge mx-2 bg-secondary pill"> {{ inactive_account_table.rows|length }}</span>
           </button>
         </h2>
