--- a/anvil_consortium_manager/templates/anvil_consortium_manager/billingproject_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/billingproject_detail.html
@@ -45,7 +45,7 @@
 
 {% block action_buttons %}
   {% if show_edit_links %}
-  <a href="{% url 'anvil_consortium_manager:billing_projects:update' slug=object.name %}" class="btn btn-secondary" role="button">Update information</a>
+  <a href="{% url 'anvil_consortium_manager:billing_projects:update' slug=object.name %}" class="btn btn-secondary" role="button">Update</a>
   </p>
   {% endif %}
 {% endblock action_buttons %}
