--- a/example_site/templates/app/example_workspace_detail.html
+++ b/example_site/templates/app/example_workspace_detail.html
@@ -2,8 +2,8 @@
 
 {% block workspace_data %}
   <hr>
-  <ul>
-    <li>Study: {{ object.exampleworkspacedata.study_name }}</li>
-    <li>Consent: {{ object.exampleworkspacedata.consent_code }}</li>
-  </ul>
+  <dl class="row">
+    <dt class="col-sm-2">Study</dt> <dd class="col-sm-10">{{ object.exampleworkspacedata.study_name }}</dd>
+    <dt class="col-sm-2">Consent</dt> <dd class="col-sm-10">{{ object.exampleworkspacedata.consent_code }}</dd>
+  </dl>
 {% endblock workspace_data %}
