--- a/anvil_consortium_manager/templates/anvil_consortium_manager/groupaccountmembership_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/groupaccountmembership_detail.html
@@ -4,13 +4,13 @@
 {% block title %}Group account membership: {{ object }}{% endblock %}
 
 {% block panel %}
-  <ul>
-    <li>Group: <a href="{{object.group.get_absolute_url}}"> {{ object.group}} </a></li>
-    <li>Account: <a href="{{object.account.get_absolute_url}}"> {{ object.account}} </a></li>
-    <li>Role: {{ object.role }}</li>
-    <li>Date added: {{ object.created }}</li>
-    <li>Date modified: {{ object.modified }}</li>
-  </ul>
+<dl class="row">
+  <dt class="col-sm-2">Group</dt> <dd class="col-sm-10"><a href="{{ object.billing_project.get_absolute_url }}">{{ object.group }}</a></dd>
+  <dt class="col-sm-2">Account</dt> <dd class="col-sm-10"><a href="{{ object.account.get_absolute_url }}">{{ object.account }}</a></dd>
+  <dt class="col-sm-2">Role</dt> <dd class="col-sm-10">{{ object.role }}</dd>
+  <dt class="col-sm-2">Date added</dt> <dd class="col-sm-10">{{ object.created }}</dd>
+  <dt class="col-sm-2">Date modified</dt> <dd class="col-sm-10">{{ object.modified }}</dd>
+</dl>
 {% endblock panel %}
 
 {% block action_buttons %}
