Use "create" instead of "add" where appropriate in navbar

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/navbar.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/navbar.html
@@ -75,7 +75,7 @@
               </li>
               {% if perms.anvil_consortium_manager.anvil_project_manager_edit %}
               <li>
-                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:managed_groups:new' %}">Add a group</a>
+                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:managed_groups:new' %}">Create a new group</a>
               </li>
               {% endif %}
               <li>
