--- a/anvil_consortium_manager/templates/anvil_consortium_manager/navbar.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/navbar.html
@@ -122,14 +122,14 @@
                 <li><hr class="dropdown-divider"></li>
                 <li class="dropdown-item"><b>{{ workspace_name }}s</b>
                 <li>
-                  <a class="dropdown-item" href="{% url 'anvil_consortium_manager:workspaces:list' workspace_type %}">List workspaces</a>
+                  <a class="dropdown-item mx-3" href="{% url 'anvil_consortium_manager:workspaces:list' workspace_type %}">List workspaces</a>
                 </li>
                 {% if perms.anvil_consortium_manager.anvil_project_manager_edit %}
                 <li>
-                  <a class="dropdown-item" href="{% url 'anvil_consortium_manager:workspaces:new' workspace_type %}">Create a new workspace</a>
+                  <a class="dropdown-item mx-3" href="{% url 'anvil_consortium_manager:workspaces:new' workspace_type %}">Create a new workspace</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="{% url 'anvil_consortium_manager:workspaces:import' workspace_type %}">Import a workspace from AnVIL</a>
+                  <a class="dropdown-item mx-3" href="{% url 'anvil_consortium_manager:workspaces:import' workspace_type %}">Import a workspace from AnVIL</a>
                 </li>
                 {% endif %}
               {% endfor %}
