--- a/anvil_consortium_manager/templates/anvil_consortium_manager/groupgroupmembership_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/groupgroupmembership_detail.html
@@ -12,7 +12,7 @@
     <dt class="col-sm-2">Parent group</dt> <dd class="col-sm-10"><a href="{{ object.billing_project.get_absolute_url }}">{{ object.parent_group }}</a></dd>
     <dt class="col-sm-2">Child group</dt> <dd class="col-sm-10"><a href="{{ object.account.get_absolute_url }}">{{ object.child_group }}</a></dd>
     <dt class="col-sm-2">Role</dt> <dd class="col-sm-10">{{ object.role }}</dd>
-    <dt class="col-sm-2">Date added</dt> <dd class="col-sm-10">{{ object.created }}</dd>
+    <dt class="col-sm-2">Date created</dt> <dd class="col-sm-10">{{ object.created }}</dd>
     <dt class="col-sm-2">Date modified</dt> <dd class="col-sm-10">{{ object.modified }}</dd>
   </dl>
 </div>
