--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupsharing_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupsharing_detail.html
@@ -9,7 +9,7 @@
   <li>Workspace: <a href="{{object.workspace.get_absolute_url}}"> {{ object.workspace}} </a></li>
   <li>Access: {{ object.access }}</li>
   <li>Can compute: {{ object.can_compute }}</li>
-  <li>Date added: {{ object.created }}</li>
+  <li>Date created: {{ object.created }}</li>
   <li>Date modified: {{ object.modified }}</li>
 </ul>
 {% endblock panel %}
