--- a/anvil_consortium_manager/templates/anvil_consortium_manager/account_update.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/account_update.html
@@ -7,7 +7,7 @@
   <ul>
     <li>Email: {{ object.email }}</li>
     <li>Status: {{ object.get_status_display }}</li>
-    <li>Date added: {{ object.created }}</li>
+    <li>Date created: {{ object.created }}</li>
     <li>Date modified: {{ object.modified }}</li>
     <li>User: {% if object.verified_email_entry %}{{ object.verified_email_entry.user }}{% else %} &mdash; {% endif %}</li>
     <li>Date verified by user: {% if object.verified_email_entry %}{{ object.verified_email_entry.date_verified }}{% else %} &mdash; {% endif %}</li>
