--- a/anvil_consortium_manager/templates/anvil_consortium_manager/billingproject_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/billingproject_detail.html
@@ -17,7 +17,7 @@
 {% block panel %}
   <dl class="row">
     <dt class="col-sm-2">Name</dt> <dd class="col-sm-10">{{ object.name }}</dd>
-    <dt class="col-sm-2">Date added</dt> <dd class="col-sm-10">{{ object.created }}</dd>
+    <dt class="col-sm-2">Date created</dt> <dd class="col-sm-10">{{ object.created }}</dd>
     <dt class="col-sm-2">Date modified</dt> <dd class="col-sm-10">{{ object.modified }}</dd>
   </dl>
 {% endblock panel %}
