--- a/anvil_consortium_manager/templates/anvil_consortium_manager/managedgroup_update.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/managedgroup_update.html
@@ -6,7 +6,7 @@
 {% block panel %}
   <ul>
     <li>Name: {{ object.name }}</li>
-    <li>Date added: {{ object.created }}</li>
+    <li>Date created: {{ object.created }}</li>
     <li>Date modified: {{ object.modified }}</li>
   </ul>
 {% endblock panel %}
