--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_update.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_update.html
@@ -8,7 +8,7 @@
   <ul>
     <li>Billing project: {{ object.billing_project }}</li>
     <li>Name: {{ object.name }}</li>
-    <li>Date added: {{ object.created }}</li>
+    <li>Date created: {{ object.created }}</li>
     <li>Date modified: {{ object.modified }}</li>
   </ul>
   {% block workspace_data %}
