--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupsharing_update.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupsharing_update.html
@@ -8,7 +8,7 @@
 <ul>
   <li>Group: <a href="{{object.group.get_absolute_url}}"> {{ object.group}} </a></li>
   <li>Workspace: <a href="{{object.workspace.get_absolute_url}}"> {{ object.workspace}} </a></li>
-  <li>Date added: {{ object.created }}</li>
+  <li>Date created: {{ object.created }}</li>
   <li>Date modified: {{ object.modified }}</li>
 </ul>
 {% endblock panel %}
