--- a/anvil_consortium_manager/templates/anvil_consortium_manager/billingproject_update.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/billingproject_update.html
@@ -4,11 +4,11 @@
 {% block title %}Update Billing Project{% endblock title %}
 
 {% block panel %}
-  <ul>
-    <li>Name: {{ object.name }}</li>
-    <li>Date created: {{ object.created }}</li>
-    <li>Date modified: {{ object.modified }}</li>
-  </ul>
+<dl class="row">
+  <dt class="col-sm-2">Name</dt> <dd class="col-sm-10">{{ object.name }}</dd>
+  <dt class="col-sm-2">Date created</dt> <dd class="col-sm-10">{{ object.created }}</dd>
+  <dt class="col-sm-2">Date modified</dt> <dd class="col-sm-10">{{ object.modified }}</dd>
+</dl>
 {% endblock panel %}
 
 {% block after_panel %}
