--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_update.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_update.html
@@ -5,14 +5,12 @@
 {% block title %}Update {{ workspace_type_display_name }}{% endblock title %}
 
 {% block panel %}
-  <ul>
-    <li>Billing project: {{ object.billing_project }}</li>
-    <li>Name: {{ object.name }}</li>
-    <li>Date created: {{ object.created }}</li>
-    <li>Date modified: {{ object.modified }}</li>
-  </ul>
-  {% block workspace_data %}
-  {% endblock workspace_data %}
+<dl class="row">
+  <dt class="col-sm-2">Billing project</dt> <dd class="col-sm-10"><a href="{{ object.billing_project.get_absolute_url }}">{{ object.billing_project }}</a></dd>
+  <dt class="col-sm-2">Name</dt> <dd class="col-sm-10">{{ object.name }}</dd>
+  <dt class="col-sm-2">Date added</dt> <dd class="col-sm-10">{{ object.created }}</dd>
+  <dt class="col-sm-2">Date modified</dt> <dd class="col-sm-10">{{ object.modified }}</dd>
+</dl>
 {% endblock panel %}
 
 
