--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupsharing_update.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupsharing_update.html
@@ -5,12 +5,13 @@
 {% block title %}Modify workspace group sharing{% endblock %}
 
 {% block panel %}
-<ul>
-  <li>Group: <a href="{{object.group.get_absolute_url}}"> {{ object.group}} </a></li>
-  <li>Workspace: <a href="{{object.workspace.get_absolute_url}}"> {{ object.workspace}} </a></li>
-  <li>Date created: {{ object.created }}</li>
-  <li>Date modified: {{ object.modified }}</li>
-</ul>
+<dl class="row">
+  <dt class="col-sm-2">Group</dt> <dd class="col-sm-10"><a href="{{object.group.get_absolute_url}}"> {{ object.group}} </a></dd>
+  <dt class="col-sm-2">Workspace</dt> <dd class="col-sm-10"><a href="{{object.workspace.get_absolute_url}}"> {{ object.workspace}} </a></dd>
+  <dt class="col-sm-2">Date created</dt> <dd class="col-sm-10">{{ object.created}} </dd>
+  <dt class="col-sm-2">Date modified</dt> <dd class="col-sm-10"> {{ object.modified}} </dd>
+</dl>
+
 {% endblock panel %}
 
 {% block after_panel %}
