Use single words in form submit buttons (add, create, import, etc)

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_create.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_create.html
@@ -14,7 +14,7 @@
     {{ workspace_data_formset|crispy }}
     {{ form|crispy }}
 
-    <button type="submit" class="btn btn-success">Create workspace</button>
+    <button type="submit" class="btn btn-success">Create</button>
   </form>
 {% endblock %}
 
