--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_import.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_import.html
@@ -11,6 +11,6 @@
     {% csrf_token %}
     {{ workspace_data_formset|crispy }}
     {{ form|crispy }}
-    <button type="submit" class="btn btn-success">Import workspace</button>
+    <button type="submit" class="btn btn-success">Import</button>
   </form>
 {% endblock %}
