--- a/anvil_consortium_manager/templates/anvil_consortium_manager/account_import.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/account_import.html
@@ -10,6 +10,6 @@
   <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit" class="btn btn-success">Import account</button>
+    <button type="submit" class="btn btn-success">Import</button>
   </form>
 {% endblock %}
