--- a/anvil_consortium_manager/templates/anvil_consortium_manager/groupgroupmembership_form.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/groupgroupmembership_form.html
@@ -11,7 +11,7 @@
   <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit" class="btn btn-success">Save membership</button>
+    <button type="submit" class="btn btn-success">Add</button>
   </form>
 {% endblock %}
 
