--- a/anvil_consortium_manager/templates/anvil_consortium_manager/managedgroup_create.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/managedgroup_create.html
@@ -10,6 +10,6 @@
   <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit" class="btn btn-success">Create group</button>
+    <button type="submit" class="btn btn-success">Create</button>
   </form>
 {% endblock %}
