--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupsharing_form_bygroup.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupsharing_form_bygroup.html
@@ -12,7 +12,7 @@
   <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit" class="btn btn-success">Save</button>
+    <button type="submit" class="btn btn-success">Share</button>
   </form>
 {% endblock %}
 
