--- a/anvil_consortium_manager/templates/anvil_consortium_manager/account_update.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/account_update.html
@@ -7,17 +7,7 @@
 <dl class="row">
   <dt class="col-sm-2">Email</dt> <dd class="col-sm-10">{{ object.email }}</dd>
   <dt class="col-sm-2">Status</dt> <dd class="col-sm-10">{{ object.get_status_display }}</dd>
-  <dt class="col-sm-2">User</dt> <dd class="col-sm-10">
-    {% if object.verified_email_entry %}
-      {% if object.verified_email_entry.user.get_absolute_url %}
-        <a href="{{ object.verified_email_entry.user.get_absolute_url }}">{{ object.verified_email_entry.user }}</a>
-      {% else %}
-        {{ object.verified_email_entry.user }}
-      {% endif %}
-    {% else %}
-      &mdash;
-    {% endif %}
-  </dd>
+  <dt class="col-sm-2">User</dt> <dd class="col-sm-10">{% if object.verified_email_entry %}{{ object.verified_email_entry.user }}{% else %} &mdash; {% endif %}</dd>
   <dt class="col-sm-2">Date verified</dt> <dd class="col-sm-10">{% if object.verified_email_entry %}{{ object.verified_email_entry.date_verified }}{% else %} &mdash; {% endif %}</dd>
   <dt class="col-sm-2">Date created</dt> <dd class="col-sm-10">{{ object.created }}</dd>
   <dt class="col-sm-2">Date modified</dt> <dd class="col-sm-10">{{ object.modified }}</dd>
