--- a/anvil_consortium_manager/templates/anvil_consortium_manager/account_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/account_detail.html
@@ -66,7 +66,7 @@
         <h2 class="accordion-header" id="headingAccessibleWorkspacesOne">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseAccessibleWorkspacesOne" aria-expanded="false" aria-controls="collapseAccessibleWorkspacesOne">
             <span class="fa-solid fa-user-group mx-2"></span>
-            View workspaces that this accessible to this account
+            View workspaces that this account can access
             <span class="badge mx-2 bg-secondary pill"> {{ accessible_workspace_table.rows|length }}</span>
           </button>
         </h2>
