--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
@@ -7,7 +7,7 @@
 
 
 {% block after_title %}
-  <a class="btn btn-light" href="{{ object.get_anvil_url }}" role="button">
+  <a class="btn btn-light" href="{{ object.get_anvil_url }}" target="_blank" role="button">
     <span class="fa-solid fa-arrow-up-right-from-square mx-1"></span>
     View on AnVIL
   </a>
