--- a/anvil_consortium_manager/templates/anvil_consortium_manager/groupaccountmembership_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/groupaccountmembership_detail.html
@@ -5,7 +5,7 @@
 
 {% block panel %}
 <dl class="row">
-  <dt class="col-sm-2">Group</dt> <dd class="col-sm-10"><a href="{{ object.billing_project.get_absolute_url }}">{{ object.group }}</a></dd>
+  <dt class="col-sm-2">Group</dt> <dd class="col-sm-10"><a href="{{ object.group.get_absolute_url }}">{{ object.group }}</a></dd>
   <dt class="col-sm-2">Account</dt> <dd class="col-sm-10"><a href="{{ object.account.get_absolute_url }}">{{ object.account }}</a></dd>
   <dt class="col-sm-2">Role</dt> <dd class="col-sm-10">{{ object.role }}</dd>
   <dt class="col-sm-2">Date created</dt> <dd class="col-sm-10">{{ object.created }}</dd>
