Load media for workspace_data_formset in workspace edit templates
If a workspace data form requires media, it needs to be loaded in
the template.

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_import.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_import.html
@@ -14,3 +14,8 @@
     <button type="submit" class="btn btn-success">Import</button>
   </form>
 {% endblock %}
+
+{% block inline_javascript %}
+  {{ form.media }}
+  {{ workspace_data_formset.media }}
+{% endblock inline_javascript %}
