Add some explanatory text to ManagedGroupDetail template

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/managedgroup_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/managedgroup_detail.html
@@ -37,6 +37,7 @@
       </h2>
       <div id="collapseGraphOne" class="accordion-collapse collapse" aria-labelledby="headingGraphOne" data-bs-parent="#accordionGraph">
         <div class="accordion-body">
+          <p>This figure shows parent-child relationships for this group. Only groups that this group is connected to are plotted.</p>
           {{ graph|safe }}
         </div>
       </div>
