Rearrange Workspaces navbar dropdown

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/navbar.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/navbar.html
@@ -109,10 +109,10 @@
             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
 
               <li>
-                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:workspaces:list_all' %}">List workspaces</a>
+                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:workspaces:landing_page' %}">Workspace types</a>
               </li>
               <li>
-                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:workspaces:landing_page' %}">Workspace types</a>
+                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:workspaces:list_all' %}">List all workspaces</a>
               </li>
               <li>
                 <a class="dropdown-item" href="{% url 'anvil_consortium_manager:workspace_group_sharing:list' %}">Workspace sharing</a>
