Change title in workspace landing page template

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_landing_page.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_landing_page.html
@@ -1,12 +1,12 @@
 {% extends "anvil_consortium_manager/base.html" %}
 {% load static %}
 
-{% block title %}Workspaces{% endblock %}
+{% block title %}Workspace types{% endblock %}
 
 {% block content %}
 
 
-<h1 class="pb-2 border-bottom">Workspaces</h1>
+<h1 class="pb-2 border-bottom">Workspace types</h1>
 
 
 <div class="album py-2">
