Minor wording change

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/index.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/index.html
@@ -117,7 +117,7 @@
 
           <ul class="list-group list-group-flush">
             <li class ="list-group-item">
-              <a href="{% url 'anvil_consortium_manager:workspaces:list_all' %}" class="icon-link">List workspaces</a>
+              <a href="{% url 'anvil_consortium_manager:workspaces:list_all' %}" class="icon-link">List all workspaces</a>
               <span class="fa-solid fa-angle-right"></span>
             </li>
             <li class ="list-group-item">
