Minor wording changes to links on workspace landing page

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_landing_page.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_landing_page.html
@@ -30,7 +30,7 @@
             </li>
             {% if show_edit_links %}
             <li class ="list-group-item">
-              <a href="{% url 'anvil_consortium_manager:workspaces:new' workspace_adapter.get_type %}" class="icon-link">Add a workspace</a>
+              <a href="{% url 'anvil_consortium_manager:workspaces:new' workspace_adapter.get_type %}" class="icon-link">Create a workspace on AnVIL</a>
               <span class="fa-solid fa-angle-right"></span>
             </li>
             <li class ="list-group-item">
