Add a view mixin to add registered workspace adapters to context
This mixin takes care of adding registered workspace adapters to the
context data. Use this mixin in the WorkspaceDetail and the
WorkspaceLandingPage views, since they both need to access the set
of registered workspace adapters. Update templates and tests for
the new mixin, which is slightly different than how existing views
added info about registered workspaces to the context.

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
@@ -77,8 +77,9 @@
       </a>
 
       <ul class="dropdown-menu" aria-labelledby="cloneWorkspaceMenuLink">
-        {% for workspace_type, workspace_name in registered_workspaces.items %}
-          <li><a class="dropdown-item" href="{% url 'anvil_consortium_manager:workspaces:clone' billing_project_slug=object.billing_project.name workspace_slug=object.name workspace_type=workspace_type %}">{{ workspace_name }}</a></li>
+
+        {% for workspace_adapter in registered_workspace_adapters %}
+          <li><a class="dropdown-item" href="{% url 'anvil_consortium_manager:workspaces:clone' billing_project_slug=object.billing_project.name workspace_slug=object.name workspace_type=workspace_adapter.get_type %}">{{ workspace_adapter.get_name }}</a></li>
         {% endfor %}
 
       </ul>
