Add django-filters to INSTALLED_APPS Add filter.py, define the filter for BillingProjects Modify billingproject_list.html to include the filter form Add BillingProjectFilter to BillingProjectList view.

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/billingproject_list.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/billingproject_list.html
@@ -7,6 +7,13 @@
 
 {% block content %}
 <div class="container">
+  <div class="alert alert-info" role="alert">
+
+      <form method="get">
+        {{ filter.form }}
+        <button type="submit" class="btn btn-primary">Filter</button>
+      </form>
+  </div>
 
   <div class="row">
     <div class="col-sm-12">
